# device-managing-portal

./: .env.example  .gitignore  CLAUDE.md  DEMO_GUIDELINE.md  DESIGN.md  DEVELOPMENT.md  FEATURES.md  PLAN.md  README.md  SYSTEM_REQUIREMENTS.md  docker-compose.yml  hummingbird_online_devices_import.csv
backend/: .env.example  Dockerfile  entrypoint.sh  middleware.py  pyproject.toml  requirements.txt  version.py
backend/apps/admin_tools/: models.py  urls.py  views.py
backend/apps/admin_tools/migrations/: 0001_initial.py
backend/apps/clusters/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/clusters/migrations/: 0001_initial.py
backend/apps/device_models/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/device_models/migrations/: 0001_initial.py
backend/apps/devices/: admin.py  models.py  serializers.py  untracked_urls.py  untracked_views.py  urls.py  views.py
backend/apps/enterprises/: admin.py  apps.py  models.py  serializers.py  sync.py  urls.py  views.py
backend/apps/notifications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reservations/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/vault/: models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/data/: db.sqlite3
backend/fixtures/: clusters_seed.json  demo_fixture.json
backend/services/: zedcloud.py
backend/utils/: crypto.py  email.py  log_filters.py  permissions.py  request_context.py
(+120 files in other folders)
