[project]
name = "holocron-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "django~=6.0",
    "djangorestframework~=3.15",
    "django-cors-headers~=4.4",
    "django-environ~=0.11",
    "cryptography~=42.0",
    "httpx~=0.27",
    "gunicorn~=22.0",
    "apscheduler~=3.0",
    "psycopg2-binary~=2.9",
]
